k8s/traffic/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: agn-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: api-dev.agn.local 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agn-api-svc
                port:
                  number: 80
    - host: api-uat.agn.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agn-api-svc
                port:
                  number: 80
    - host: api.agn.local  
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: agn-api-svc
                port:
                  number: 80
